# trading

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  vcpkg.json
cpp/apps/logger/: main.cpp
cpp/apps/trader/: main.cpp
cpp/engine/: main.cpp
cpp/include/trading/: app.hpp
cpp/include/trading/adapters/exchanges/: ws_adapter.hpp
cpp/include/trading/adapters/exchanges/kalshi/: auth_signer.hpp  oms_adapter.hpp  ws_adapter.hpp
cpp/include/trading/adapters/exchanges/polymarket/: ws_adapter.hpp
cpp/include/trading/adapters/logging/: logger.hpp
cpp/include/trading/adapters/ws/: client.hpp  feed_runner.hpp  session.hpp
cpp/include/trading/config/: trader_config.hpp
cpp/include/trading/core/: app.hpp
cpp/include/trading/decode/: dispatch.hpp  extracted_fields.hpp
cpp/include/trading/decode/exchanges/kalshi/: extractor.hpp
cpp/include/trading/decode/exchanges/polymarket/: extractor.hpp
cpp/include/trading/engine/: runtime.hpp
cpp/include/trading/ingest/: frame_handle.hpp  frame_pool.hpp  raw_frame.hpp  spsc_frame_queue.hpp  ws_message_sink.hpp
cpp/include/trading/internal/: market_types.hpp  normalized_event.hpp  oms_types.hpp  router_frame.hpp
cpp/include/trading/model/: normalized_event.hpp
cpp/include/trading/oms/: exchange_adapter.hpp  global_risk_gate.hpp  order_event_sink.hpp  order_manager.hpp  order_manager_core.hpp  paper_order_transport.hpp  parse_result.hpp  portfolio_risk_gate.hpp  portfolio_risk_snapshot_provider.hpp  position_ledger.hpp  position_ledger_core.hpp  transport.hpp  ws_order_transport.hpp
cpp/include/trading/parsers/: parse_result.hpp  parser_adapter.hpp  parser_concept.hpp
cpp/include/trading/parsers/exchanges/kalshi/: parser.hpp
cpp/include/trading/parsers/exchanges/polymarket/: parser.hpp
cpp/include/trading/pipeline/: live_pipeline.hpp
cpp/include/trading/router/: route_key.hpp  router.hpp  shard_dispatch.hpp
cpp/include/trading/shards/: book_store.hpp  decoded_message.hpp  event_handler.hpp  message_parser.hpp  shard.hpp
cpp/include/trading/strategy/: dropping_order_intent_sink.hpp  ledger_shard_risk_snapshot_provider.hpp  market_filter_event_handler.hpp  noop_strategy.hpp  order_intent_sink.hpp  order_manager_intent_sink.hpp  shard_risk_gate.hpp  shard_risk_snapshot_provider.hpp  strategy.hpp  strategy_event_handler.hpp  strategy_runner.hpp
cpp/src/: app.cpp
cpp/src/adapters/exchanges/kalshi/: auth_signer.cpp  oms_adapter.cpp  ws_adapter.cpp
cpp/src/adapters/exchanges/polymarket/: ws_adapter.cpp
cpp/src/adapters/logging/: logger.cpp
cpp/src/adapters/ws/: client.cpp  feed_runner.cpp  session.cpp
cpp/src/config/: trader_config.cpp
cpp/src/core/: app.cpp
cpp/src/decode/: dispatch.cpp
cpp/src/decode/exchanges/kalshi/: extractor.cpp
cpp/src/decode/exchanges/polymarket/: extractor.cpp
cpp/src/engine/: runtime.cpp
cpp/src/ingest/: frame_pool.cpp  ws_message_sink.cpp
cpp/src/oms/: global_risk_gate.cpp  order_manager.cpp  order_manager_core.cpp  paper_order_transport.cpp  portfolio_risk_gate.cpp  position_ledger.cpp  position_ledger_core.cpp  ws_order_transport.cpp
cpp/src/parsers/exchanges/kalshi/: parser.cpp
cpp/src/parsers/exchanges/polymarket/: parser.cpp
cpp/src/pipeline/: live_pipeline.cpp
cpp/src/router/: router.cpp  shard_dispatch.cpp
cpp/src/shards/: book_store.cpp  message_parser.cpp  shard.cpp
cpp/src/strategy/: shard_risk_gate.cpp  strategy_event_handler.cpp  strategy_runner.cpp
cpp/tests/: trading_tests.cpp
cpp/tests/support/: fake_ws_transport.hpp
docs/: data_contract.md  perf_backlog.md  trader_config.example.json
